--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,16 @@ body{
 }
 .section-title{
     color: #181818;
-    text-align: center;
     font-size: 35px;
     font-weight: 700;
+    text-align: center;
 }
 .section-des {
     color: #757575;
-    text-align: center;
     font-size: 18px;
     font-weight: 400;
-    line-height: 30px; 
+    line-height: 30px;
+    text-align: center;
 }   
 /* nav style */
 nav{
@@ -94,12 +94,88 @@ nav a {
     color: #757575;
     margin-bottom: 30px;
 }
-               /* main section styles */
+/* main section styles */
+main {
+    max-width: 1140;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+}
                
 /* about section styles */
 .about{
     padding: 131px 157px 131px 157px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px 230px ;
+    margin: 130px 230px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info {
+    text-align: center;
+}
+.info-title{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+}
+.info-descript{
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
+}
+#what-i-do-des {
+    padding: 30px 345px;
+}
+.skills-container {
+    display: flex;
+    margin: 50px 230px;
+}
+.skill {
+    padding: 30px;
+    gap: 24px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+    color: var(--Dark-01, #181818);
+    font-size: 20px;
+    font-weight: 700;
+}
+.skill-des {
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+}
+/* Resume-Section styles */
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+}
+.resume-container{
+    display: flex;
+    gap: 70px;
+    margin: 50px 230px;
+}
+.resume-container hr{
+    margin: 30px 0;
+}
+.resume-item-institute{
+    color: var(--Dark-03, #757575);
+    margin-top: 1px;
+    
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
