--- a/styles.css
+++ b/styles.css
@@ -179,3 +179,34 @@ main section{
     text-align: center;
     margin-top: 50px;
 }
+/* footer style  */
+footer {
+    display: flex;
+    background: #FFF8F3;
+    gap: 117px;
+    margin-top: 131px;
+    padding: 130px 230px;
+}
+.footer-column {
+    width: 50%;
+}
+.footer-title {
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+}
+.social-links a {
+    margin-right: 24px;
+    margin-top: 30px;
+    
+}
+.contact input[type="text"], .contact input[type="email"], textarea {
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 30px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+}
